Resolve outstanding colour contrast warnings on Firefox

--- a/src/furo/assets/styles/base/_screen-readers.sass
+++ b/src/furo/assets/styles/base/_screen-readers.sass
@@ -8,6 +8,8 @@
   clip: rect(0,0,0,0) !important
   white-space: nowrap !important
   border: 0 !important
+  color: var(--color-foreground-primary)
+  background: var(--color-background-primary)
 
 :-moz-focusring
   outline: auto
