--- a/src/furo/assets/styles/variables/_colors.scss
+++ b/src/furo/assets/styles/variables/_colors.scss
@@ -12,7 +12,7 @@
   // Base Colors
   --color-foreground-primary: black; // for main text and headings
   --color-foreground-secondary: #5a5c63; // for secondary text
-  --color-foreground-muted: #646776; // for muted text
+  --color-foreground-muted: #6B6F76; // for muted text
   --color-foreground-border: #878787; // for content borders
 
   --color-background-primary: white; // for content
